# llm-observability-dashboard

./: .coveragerc  .env.example  .eslintrc.js  .gitignore  DELIVERABLES_CHECKLIST.md  DEMO_VIDEO_SCRIPT.md  DOCKER_SETUP.md  Makefile  PROJECT_CHECKLIST.md  README.md  check_api.py  conftest.py  demo_setup.sh  docker-compose.yml  package.json  pytest.ini  requirements.txt
.github/workflows/: ci.yml  tests.yml
backend/: auth.py  cache.py  config.py  database.py  generate_evals_dataset.py  main.py  models.py  requirements.txt  schemas.py  seed_all.py  seed_data.py  telemetry.py
backend/data/: DATASET_INFO.md  evals_dataset.csv  lmsys_sample.csv  sample_logs.csv
backend/evals/: __init__.py  llm_judge.py  rule_engine.py  text_metrics.py
backend/migrations/: 001_init_schema.sql  README.md  __init__.py  runner.py
backend/routes/: auth.py  evals.py  (+3 more)
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  SETUP.md
e2e/: package.json  playwright.config.js
examples/: demo.py
frontend/: .env.example  index.html  package.json  tailwind.config.js  vite.config.js
load_tests/: locustfile.py
sdk/: README.md  __init__.py  llm_observer.py  pyproject.toml  setup.py
tests/: conftest.py  test_api_integration.py  test_auth.py  test_cache_otel.py  test_coverage_final.py  test_db.py  test_dual_source.py  test_edge_cases.py  test_evals.py  test_evals_integration.py  test_frontend_integration.py  test_logs.py  test_metrics.py  test_performance.py  test_production_ready.py  test_schemas.py  test_sdk.py  test_sdk_integration.py  test_upload.py
(+31 files in other folders)
