[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-observer"
version = "0.1.0"
description = "Python SDK for LLM Observability Dashboard – automatic logging for LLM API calls"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["llm", "observability", "logging", "monitoring", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.7.0"]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/SKB-18/llm-observability-dashboard"
Repository = "https://github.com/SKB-18/llm-observability-dashboard"
"Bug Tracker" = "https://github.com/SKB-18/llm-observability-dashboard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_observer*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
